# ncmdump

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  compileRun.sh  ncmdumpkey  ncmdumpkey.pub  run.sh
src/: main  main.cpp  ncmcrypt.cpp
src/include/: ncmcrypt.h
